<resources>
    <string name="app_name">全程心管家</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>

    <!--preference key-->
    <!--是否设置了默认使用健康设备记录数据-->
    <string name="setting_pref_key_use_equipment">use_equipment</string>
    <!--是否开启了默认健康数据记录方式-->
    <string name="setting_pref_key_measure_default">measure_method_default</string>

    <string name="setting_title_stay_notification">常驻通知栏</string>
    <string name="setting_summary_stay_notification">可提高优先级，确保通知能够及时到达</string>
    <string name="setting_summary_off_measure">弹窗提示选择数据记录方式</string>
    <string name="setting_summary_on_measure_device">默认使用健康设备进行测量健康数据</string>
    <string name="setting_summary_on_measure_manual">默认手动输入健康数据</string>
    <string name="setting_title_measure">默认记录方式</string>
    <string name="setting_title_version">版本</string>
    <string name="setting_pref_key_persistent_notification">stay_notification</string>
    <string name="setting_category_notification">通知</string>
    <string name="setting_category_health_device">健康设备</string>


    <string name="title_activity_setting">设置</string>
    <string name="title_activity_my_order">我的订单</string>
    <string name="title_activity_web">网页</string>
    <string name="title_activity_doctor_detail">医生详情</string>
    <string name="title_activity_address">住址</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_send">发送</string>
    <string name="query_patient_info_failed">获取患者信息失败，请重试！</string>
    <string name="text_tips">小贴士</string>
    <string name="question_mark">\?</string>

    <!--血压、血糖界面-->
    <string name="text_measure_date">测量日期</string>
    <string name="text_measure_time">测量时间</string>
    <string name="text_systolic_pressure">收缩压</string>
    <string name="text_diastolic_pressure">舒张压</string>
    <string name="_0">0</string>
    <string name="text_heart_rate">心率</string>
    <string name="text_measure_period">测量时段</string>
    <string name="text_blood_sugar">血糖</string>
    <string name="unit_mol_l">mmol/L</string>

    <!--登录-->
    <string name="login_btn_login">登录</string>
    <string name="login_et_password_hint">请输入密码</string>
    <string name="login_et_phone_hint">请输入手机号</string>
    <string name="login_text_forgot_password">忘记密码？</string>
    <string name="login_text_register">注册</string>

    <string name="text_exit">退出</string>
    <string name="text_save">保存</string>

    <!--聊天界面-->
    <string name="btn_chat_room_buy_again">再次购买</string>

    <!--界面label-->
    <string name="title_activity_bp_measure">测量血压</string>
    <string name="title_activity_bs_measure">测量血糖</string>
    <string name="title_activity_symptom">不适症状</string>
    <string name="title_activity_medical_record">就诊记录</string>
    <string name="title_activity_daily_record">每日记录</string>
    <string name="title_activity_chat_room">聊天</string>

    <!--每日记录界面-->
    <string name="cb_item_daily_record_dialog_single_check_auto">健康设备</string>
    <string name="cb_item_daily_record_dialog_single_check_manual">手动输入</string>
    <string name="cb_item_daily_record_dialog_single_check_clear">每次弹出窗口选择</string>

    <string name="measure_normal_title">正常值</string>
    <string name="measure_value_title">测量值</string>
    <string name="menu_title_save">保存</string>
    <string name="btn_symptom_item_comment">建议</string>
    <string name="title_activity_health_report">HealthReportActivity</string>
    <string name="umeng_page_title_bphr">健康报表-血压</string>
    <string name="umeng_page_title_bshr">健康报表-血糖</string>
    <string name="umeng_page_title_symptomhr">健康报表-不适症状</string>
    <string name="umeng_page_title_doctors_all">所有医生</string>
    <string name="umeng_page_title_doctors_my">我的医生</string>
    <string name="umeng_page_title_home">首页</string>
    <string name="umeng_page_title_daily_report_bp">每日记录-血压</string>
    <string name="umeng_page_title_daily_report_bs">每日记录-血糖</string>
    <string name="umeng_page_title_daily_report_symptom">每日记录-不适症状</string>
    <string name="umeng_page_title_bs_guide_one">血糖测量引导1</string>
    <string name="umeng_page_title_bs_guide_two">血糖测量引导2</string>
    <string name="umeng_page_title_bs_guide_result">血糖测量引导-结果</string>
    <string name="umeng_page_title_bp_guide_one">血压测量引导1</string>
    <string name="umeng_page_title_bp_guide_two">血压测量引导2</string>
    <string name="umeng_page_title_bp_guide_result">血压测量引导-结果</string>
    <string name="umeng_page_title_me">我</string>
    <string name="umeng_page_title_setting">设置</string>
    <string name="umeng_page_title_bp_add">手动录入血压</string>
    <string name="umeng_page_title_bs_add">手动录入血糖</string>
    <string name="umeng_page_title_medical_record">就诊记录</string>
    <string name="umeng_page_title_chat_room">聊天界面</string>
    <string name="umeng_page_title_doctor_detail">医生详情</string>
    <string name="umeng_page_title_medicine_remind">用药提醒</string>
    <string name="umeng_page_title_service">服务首页</string>
    <string name="title_activity_register">注册</string>
    <string name="register_btn_register">注册</string>
    <string name="title_activity_authorize">实名认证</string>
    <string name="title_activity_all_doctor">所有医生</string>
    <string name="title_activity_text_input">请输入</string>
    <string name="hint_please_text_something">请输入</string>
    <string name="title_activity_health_record">健康档案</string>
    <string name="text_un_authorize_notice">尊敬的用户，您还未进行实名认证。实名认证有助于您更好地管理您的健康档案。\n如您需要查看您的健康档案数据，请点击屏幕下方的实名认证完成认证。如您仅希望使用医生在线咨询服务，可暂不完成实名认证。</string>
    <string name="text_authorized_notice">尊敬的用户您已认证成功。现在您可以在下方查看自己的健康数据了。</string>
    <string name="text_authorizing_notice">尊敬的用户,您上传的认证资料正在审核中，请耐心等待2个工作日。</string>
    <string name="text_authorized_fail_notice">尊敬的用户,您上传的资料审核失败，失败的原因可能是：\n1.您上传的身份证照片不清晰。\n2.您的身份信息有误。\n如需认证，请检查相关信息后，再次上传</string>
    <string name="health_record_btn_un_authorize">实名认证</string>
    <string name="health_record_btn_authorized">已认证</string>
    <string name="health_record_btn_authorizing">审核中</string>
    <string name="health_record_btn_authorized_failed">重新认证</string>
    <string name="title_activity_medicine_remind_edit">新增提醒</string>
    <string name="title_activity_medicine_search">搜索药品</string>
    <string name="medicine_remind_edit_end_date_default">长期</string>
    <string name="health_record_test_indicator">检验指标</string>
    <string name="health_record_prescription">处方清单</string>
    <string name="health_record_surgical_history">住院手术史</string>
    <string name="text_click_to_see_more">点击查看更多</string>
    <string name="title_activity_user_info">基本信息</string>
    <string name="me_my_order">我的订单</string>
    <string name="me_setting">设置</string>
    <string name="title_activity_authorize_guide">示例参考</string>
    <string name="authorize_guide_tips">1.必须为需要身份核实的用户，本人手持其身份证\n2.照片中的信息必须真实有效\n3.手持证件人的五官应清晰\n4.身份证上所有信息为真实信息。</string>
    <string name="authorize_btn_submit">提交申请</string>

    <string name="title_activity_splash">@string/app_name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_service_detail">服务详情</string>
    <string name="service_detail_access_tip">购买医生服务后，医生将有权限查看您的健康档案数据与健康报表数据。</string>
    <string name="btn_common_network_error_retry">点击重试</string>
    <string name="authorize_hint_please_input_something">请填写</string>
    <string name="authorize_label_name">姓名</string>
    <string name="authorize_label_id">身份证号码</string>
    <string name="authorize_label_id_image">身份证图片</string>
    <string name="authorize_label_example">示例参考</string>
    <string name="title_activity_hospital">选择医院</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_sex">选择性别</string>
    <string name="title_activity_crop">裁剪</string>
    <string name="user_info_hint_nop">暂无</string>

    <string name="address_hint_province">省、直辖市</string>
    <string name="address_hint_city">市</string>
    <string name="address_hint_area">区</string>
    <string name="address_hint_detail">请输入详细地址</string>

    <string name="about_us_app_version">全程心管家v%s</string>
    <string name="about_us_sina">微博服务号：</string>
    <string name="about_us_sina_name">全程心管家</string>
    <string name="about_us_wechat">微信服务号：</string>
    <string name="about_us_wechat_name">全程心管家</string>
    <string name="about_us_organization">全程心管家介绍</string>
    <string name="about_us_organization_introduce">全程心管家是由万达全程健康打造的一款冠心病支架术后康复管理平台，旨在帮助每一位冠心病支架术患者科学安排日常生活作息，提高生活质量。我们的医生团队由多家医院心内科专家医生，全程健康医生，健康护理师等组成。您的每一项身体数据都将由专业团队持续监控。医生的每一条专业建议将直接发送到您的手机中。</string>
    <string name="about_us_app">APP产品介绍</string>
    <string name="about_us_app_introduce">全程心管家是一款心脏支架术后自我管理的app，不仅可以为支架术后患者提供在线医生咨询，护理服务，还能实时监控数据指标。通过互联网+实现了主治医生与患者点对点沟通，解决了患者在家无人照看，无法管理的难题，真正的实现了患者在家自我监测，自我管理。</string>
    <string name="me_my_doctor">我的医生</string>


</resources>
