<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_category_notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_pref_key_persistent_notification"
            android:summary="@string/setting_summary_stay_notification"
            android:title="@string/setting_title_stay_notification"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_health_device">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_pref_key_measure_default"
            android:summaryOff="@string/setting_summary_off_measure"
            android:title="@string/setting_title_measure"/>
    </PreferenceCategory>
    <Preference
        android:summary="@string/app_version"
        android:title="@string/setting_title_version"/>

</PreferenceScreen>