<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wonders.xlab.patient.module.me.address.AddressActivity"
    tools:showIn="@layout/address_activity">

    <TextView
        android:id="@+id/tv_address_province"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min"
        android:gravity="center_vertical"
        android:hint="@string/address_hint_province"
        android:textColor="@color/text_color_primary_black"
        android:textSize="@dimen/text_size_middle" />

    <TextView
        android:id="@+id/tv_address_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min"
        android:gravity="center_vertical"
        android:hint="@string/address_hint_city"
        android:textColor="@color/text_color_primary_black"
        android:textSize="@dimen/text_size_middle" />

    <TextView
        android:id="@+id/tv_address_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min"
        android:gravity="center_vertical"
        android:hint="@string/address_hint_area"
        android:textColor="@color/text_color_primary_black"
        android:textSize="@dimen/text_size_middle" />

    <EditText
        android:id="@+id/et_address_detail"
        android:layout_width="match_parent"
        android:minHeight="@dimen/item_height_min"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:gravity="center_vertical"
        android:hint="@string/address_hint_detail"
        android:textColor="@color/text_color_primary_black"
        android:textSize="@dimen/text_size_middle" />
</LinearLayout>

