<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wonders.xlab.patient.module.me.about.AboutUsActivity"
    tools:showIn="@layout/about_us_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_gray"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:drawablePadding="20dp"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="全程心管家V0.5"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/text_size_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:divider="@drawable/shape_line_divider_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_sina"
                    android:textColor="@color/text_color_primary_gray"
                    android:textSize="@dimen/text_size_middle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="right"
                    android:text="@string/about_us_sina_name"
                    android:textColor="@color/text_color_primary_gray"
                    android:textSize="@dimen/text_size_middle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_wechat"
                    android:textColor="@color/text_color_primary_gray"
                    android:textSize="@dimen/text_size_middle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="right"
                    android:text="@string/about_us_wechat_name"
                    android:textColor="@color/text_color_primary_gray"
                    android:textSize="@dimen/text_size_middle" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/about_us_organization"
            android:textColor="@color/text_color_primary_gray"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:padding="12dp"
            android:text="@string/about_us_organization_introduce"
            android:textColor="@color/text_color_primary_gray"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/about_us_app"
            android:textColor="@color/text_color_primary_gray"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:padding="12dp"
            android:text="@string/about_us_app_introduce"
            android:textColor="@color/text_color_primary_gray"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
