<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".module.auth.authorize.AuthorizeActivity"
    tools:showIn="@layout/authorize_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_authorize_name"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/item_interval_middle"
            android:paddingRight="@dimen/item_interval_middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorize_label_name"
                android:textColor="@color/text_color_primary_black"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_authorize_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/authorize_hint_please_input_something"
                android:textColor="@color/text_color_primary_gray"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <include layout="@layout/divider_vertical" />

        <RelativeLayout
            android:id="@+id/rl_authorize_id"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/item_interval_middle"
            android:paddingRight="@dimen/item_interval_middle">

            <TextView
                android:id="@+id/tv_authorize_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorize_label_id"
                android:textColor="@color/text_color_primary_black"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_authorize_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/tv_authorize_id_title"
                android:gravity="right"
                android:hint="@string/authorize_hint_please_input_something"
                android:singleLine="true"
                android:textColor="@color/text_color_primary_gray"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <include layout="@layout/divider_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/item_interval_middle"
            android:paddingRight="@dimen/item_interval_middle"
            android:text="@string/authorize_label_id_image"
            android:textColor="@color/text_color_primary_black"
            android:textSize="@dimen/text_size_large" />

        <include layout="@layout/divider_vertical" />

        <ImageView
            android:id="@+id/iv_authorize_add_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_interval_middle"
            android:scaleType="centerInside"
            android:src="@drawable/ic_group_member_add" />

        <TextView
            android:id="@+id/tv_authorize_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/item_interval_middle"
            android:text="@string/authorize_label_example"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_authorize_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_confirm_button_red"
        android:text="@string/authorize_btn_submit"
        android:textColor="@android:color/white" />
</LinearLayout>