<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:animateLayoutChanges="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".module.auth.login.LoginActivity"
    tools:showIn="@layout/login_activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/item_interval_large"
        android:scaleType="centerInside"
        android:src="@drawable/ic_login_logo"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/pic_home_top_circle_bg"/>

    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_login_et_background"
        android:drawableLeft="@drawable/account_icon"
        android:drawablePadding="10dp"
        android:hint="@string/login_et_phone_hint"
        android:inputType="phone"
        android:paddingLeft="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/text_size_middle"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_login_et_background"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/login_et_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/text_size_middle"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/tv_login_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_login_btn_background"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_middle"/>

    <TextView
        android:id="@+id/tv_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/login_text_forgot_password"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_middle"/>


    <TextView
        android:id="@+id/tv_login_go_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/login_text_register"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_middle"/>

</RelativeLayout>
